# pokefusion

./: .gitignore  Pipfile  Procfile  changelog.md  changelog.txt  main.py  pyproject.toml  requirements.txt  run.py  runtest.py  todo.txt
pokefusion/: api.py  assetmanager.py  bot.py  configmanager.py  context.py  converters.py  database.py  enums.py  environment.py  fusionapi.py  imagelib.py  log.py  pokeapi.py  pokedex.py  utils.py
pokefusion/assets/eggs/: .gitignore
pokefusion/assets/misc/: wordlist_fr.txt
pokefusion/bot/: context.py  converters.py  pokefusion.py
pokefusion/cli/: __init__.py  context.py  db.py  migrations.py  run.py  tools.py
pokefusion/cogs/: admin.py  birthday.py  christmas.py  cogutils.py  database.py  events.py  fusion.py  games.py  meta.py  misc.py  owner.py  scheduler.py
pokefusion/config/: birthdays.json  config.example.json  custom_diff_added.json  custom_fusions.json  dex_full.json  infinitedex_de.json  infinitedex_en.json  infinitedex_fr.json  pokedex_de.json  pokedex_en.json  pokedex_fr.json
pokefusion/data/: pokedex.json  pokedex_de.json  pokedex_en.json  pokedex_fr.json
pokefusion/db/: database.py  migrations.py  models.py  paths.py  schema.py
pokefusion/db/migrations/: 001_initial.py  (+2 more)
pokefusion/migrations/: 002_add_blacklist_table.py  003_remove_seeds.py
pokefusion/models/: models.py
pokefusion/scripts/: clean_assets.py  dbutils.py  dexutils.py  import_assets.py  pokeapi.py  shiny_sprites.py  utils.py
pokefusion/services/: totem.py
pokefusion/tools/: autogen_diff_added.json  dbutils.py  import_assets.py  spritesheets.py
