[project]
name = "pokefusion"
version = "2.0.0"
requires-python = "~=3.13.0"
dependencies = [
    "aiopokeapi>=0.1.13",
    "discord-py>=2.7.1",
    "fuzzywuzzy>=0.18.0",
    "levenshtein>=0.27.3",
    "peewee>=4.0.1",
    "peewee-migrate>=1.15.0",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
    "tzdata>=2025.3",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = []
